frontend/deployment-service-prod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-kube-keycloak-react-frontend
spec:
  selector:
    app: demo-kube-keycloak-react-frontend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
