frontend/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-demo-react-frontend
  labels:
    app: kube-demo-react-frontend
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-demo-react-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-demo-react-frontend
  template:
    metadata:
      labels:
        app: kube-demo-react-frontend
    spec:
      containers:
        - name: kube-demo-react-frontend
          image: kube-demo-react-frontend
          command: ["/bin/sh", "-c", "npm run build:prod && serve -s build"]
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
