frontend/frontend-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-kube-keycloak-react-frontend
spec:
  tls:
    - hosts:
      - FRONTEND_HOST
  rules:
  - host: FRONTEND_HOST
    http:
      paths:
      - backend:
          serviceName: demo-kube-keycloak-react-frontend
          servicePort: 5000
